--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@ body {
   font-family: "Raleway";
   font-size: 14px;
   font-weight: 500;
-  background-color: #BCAAA4;
+  background-color: #ffe6e6;
   -webkit-font-smoothing: antialiased;
 }
 
