--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@ h1 + p, p + p {
 <h1 slot="header">米爸</h1>
 <p slot="content">竹科工程師，喜歡收集CD，會吹長笛小喇叭，最近勤練口琴，愛老婆小孩的溫柔爸爸</p>
 </card>
-<a href="father.md.html">點我看更多</a>
+<a href="https://docs.google.com/document/d/1CoBc3061ZdO9w9WyWAlblG1-cnWrbCQy33vuNE_Vo54/edit?usp=sharing">點我看更多</a>
 <card data-image="https://scontent.ftpe7-3.fna.fbcdn.net/v/t31.0-8/19264477_1423517334434591_6506700462695143890_o.jpg?_nc_cat=102&_nc_sid=ad2b24&_nc_ohc=EecW8Cvt59gAX-bAMFR&_nc_ht=scontent.ftpe7-3.fna&oh=c6f97a1502c8fb3dcb4558c7ecea42e6&oe=5F55DDEB">
 <h1 slot="header">米小弟</h1>
 <p slot="content">怪人一個</p>
